--- a/package.json
+++ b/package.json
@@ -2,14 +2,22 @@
   "name": "aman_v2",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "generate:types": "payload generate:types"
   },
   "dependencies": {
+    "@payloadcms/db-postgres": "^3.73.0",
+    "@payloadcms/next": "^3.73.0",
+    "@payloadcms/plugin-seo": "^3.73.0",
+    "@payloadcms/richtext-lexical": "^3.73.0",
+    "graphql": "^16.12.0",
     "next": "16.1.5",
+    "payload": "^3.73.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
