--- a/package.json
+++ b/package.json
@@ -15,11 +15,18 @@
     "@payloadcms/next": "^3.73.0",
     "@payloadcms/plugin-seo": "^3.73.0",
     "@payloadcms/richtext-lexical": "^3.73.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "graphql": "^16.12.0",
+    "lucide-react": "^0.563.0",
     "next": "16.1.5",
     "payload": "^3.73.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -29,6 +36,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.5",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
