--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "dependencies": {
     "@payloadcms/db-postgres": "^3.73.0",
     "@payloadcms/next": "^3.73.0",
-    "@payloadcms/plugin-seo": "^3.73.0",
+    "@payloadcms/plugin-cloud-storage": "^3.73.0",
     "@payloadcms/richtext-lexical": "^3.73.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.9.0",
     "clsx": "^2.1.1",
     "graphql": "^16.12.0",
     "gsap": "^3.14.2",
