--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     ],
     "paths": {
       "@/*": [
-        "./*"
+        "./src/*"
       ],
       "@payload-config": [
         "./src/payload.config.ts"
