--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "gsap": "^3.14.2",
     "lucide-react": "^0.563.0",
     "next": "16.1.5",
+    "nextjs-toploader": "^3.9.17",
     "payload": "^3.73.0",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0"
